fixed non-connected, faq, and my-account spacing

--- a/src/global.css
+++ b/src/global.css
@@ -906,7 +906,10 @@ input[type="checkbox"]#terms-of-use:checked + label:before {
   display: inline-block
 }
 
-#stake-form-not-connected{
-  max-width:  320px;
-  margin: 0 auto;
+#home,
+#faq, 
+#my-account {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
 }
